--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     </h1>
 
     <div>
-        <div id="1"></div>
-        <div id="2"></div>
-        <div id="3"></div>
+        <div id="1" class="quadrado">x</div>
+        <div id="2" class="quadrado">x</div>
+        <div id="3" class="quadrado">x</div>
     </div>
 
     <div>
-        <div id="4"></div>
-        <div id="5"></div>
-        <div id="6"></div>
+        <div id="4" class="quadrado">x</div>
+        <div id="5" class="quadrado">x</div>
+        <div id="6" class="quadrado">x</div>
     </div>
 
     <div>
-        <div id="7"></div>
-        <div id="8"></div>
-        <div id="9"></div>
+        <div id="7" class="quadrado">x</div>
+        <div id="8" class="quadrado">x</div>
+        <div id="9" class="quadrado">x</div>
     </div>
 
     <div>
