css: .vencedor, .jogador

--- a/index.html
+++ b/index.html
@@ -30,18 +30,29 @@
         <div id="9" class="quadrado">x</div>
     </div>
 
-    <div>
+    <div class="jogador">
 
         <label>
             Jogador: 
         </label>
 
-        <label id="Jogador selecionado"></label>
+        <label id="jogador-selecionado">
 
-        <label id="Jogador vencedor"></label>
+        </label>
 
     </div>
 
+    <div class="vencedor">
+
+        <label>
+            Vencedor: 
+        </label>
+
+        <label id="vencedor-selecionado">
+            
+        </label>
+
+    </div>
     <div>
         <button type="button">Reiniciar</button>
     </div>
