--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     </h1>
 
     <div>
-        <div id="1" class="quadrado">x</div>
-        <div id="2" class="quadrado">x</div>
-        <div id="3" class="quadrado">x</div>
+        <div id="1" class="quadrado" onclick="chooseBox(this.id)">x</div>
+        <div id="2" class="quadrado" onclick="chooseBox(this.id)">x</div>
+        <div id="3" class="quadrado" onclick="chooseBox(this.id)">x</div>
     </div>
 
     <div>
-        <div id="4" class="quadrado">x</div>
-        <div id="5" class="quadrado">x</div>
-        <div id="6" class="quadrado">x</div>
+        <div id="4" class="quadrado" onclick="chooseBox(this.id)">x</div>
+        <div id="5" class="quadrado" onclick="chooseBox(this.id)">x</div>
+        <div id="6" class="quadrado" onclick="chooseBox(this.id)">x</div>
     </div>
 
     <div>
-        <div id="7" class="quadrado">x</div>
-        <div id="8" class="quadrado">x</div>
-        <div id="9" class="quadrado">x</div>
+        <div id="7" class="quadrado" onclick="chooseBox(this.id)">x</div>
+        <div id="8" class="quadrado" onclick="chooseBox(this.id)">x</div>
+        <div id="9" class="quadrado" onclick="chooseBox(this.id)">x</div>
     </div>
 
     <div class="jogador">
@@ -56,6 +56,8 @@
     <div>
         <button type="button">Reiniciar</button>
     </div>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
