--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     </div>
     <div>
-        <button type="button">Reiniciar</button>
+        <button type="button" onclick="reiniciar()">Reiniciar</button>
     </div>
 
     <script src="script.js"></script>
